# cbui

./: .gitignore  CMakeLists.txt  LICENSE  NOTES  README.md  README_baselayer  build.sh  camera.h  cbui_includes.h  entity.h  font.h  gameloop.h  geometry.h  graphics.h  imui.h  main.cpp  main_geom.cpp  main_wireframe.cpp  resource.h  shaders.h  sprite.h  swrender.h  test.cpp  ui.h
.github/workflows/: cmake-multi-platform.yml
algorithms/: indices.h  octree.h
atlasgen/: extr_grid.sh  main_spritegen.cpp
lib/: jg_baselayer.h
release/0.1.0/: jg_cbui.h  main.cpp
release/0.2.0/: jg_baselayer.h  jg_cbui.h  main.cpp
release/0.2.1/: jg_cbui.h  main.cpp
release/0.2.2/: jg_baselayer.h  jg_cbui.h  main.cpp
src/: cbui.h  init.h
src/algorithms/: indices.h  octree.h
src/archive/: entity.h  gameloop.h  init.h  init_arc.h  swrender.h  ui.h
src/geometry/: camera.h  geometry.h  gtypes.h  scenegraph.h  wireframe.h
src/imui/: color.h  font.h  imui.h  quad.h  raster.h  resource.h  shaders.h  sprite.h  textwrap.h  wireframe.h
src/platform/: platform_glfw.h  shaders.h
test/: test_01.cpp  test_02.cpp  test_03.cpp
tools/: NOTES
tools/atlasgen/: NOTES  alt.res  build.sh  cmunrm.cpp  getdeps.sh  main_atlasgen.cpp  main_spritegen.cpp
tools/img2raw/: build.sh  main_img2raw.cpp
tools/rawimage/: getdeps.sh  main_img2raw.cpp
tools/spritegen/: build.sh  invaders_03.raw  main.cpp
